force-app/main/default/objects/Ques_Answer__c/Ques_Answer__c.object-meta.xml
<CustomObject>
    <label>问题</label>
    <nameField>
        <displayFormat>QN-{00000000}</displayFormat>
        <label>Q_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>