force-app/main/default/objects/Ques_Answer__c/fields/Aa__c.field-meta.xml
<CustomField>
    <fullName>Aa__c</fullName>
    <label>Aa</label>
    <type>Date</type>
</CustomField>