force-app/main/default/objects/Ques_Answer__c/fields/Ab__c.field-meta.xml
<CustomField>
    <fullName>Ab__c</fullName>
    <label>Ab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>等于10个工作日</fullName>
                <default>true</default>
                <label>等于10个工作日</label>
            </value>
            <value>
                <fullName>小于10个工作日</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>