force-app/main/default/objects/Ques_Answer__c/fields/Ac__c.field-meta.xml
<CustomField>
    <fullName>Ac__c</fullName>
    <label>Ac</label>
    <type>Date</type>
</CustomField>