force-app/main/default/objects/Ques_Answer__c/fields/Ba__c.field-meta.xml
<CustomField>
    <fullName>Ba__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ba</label>
    <type>Checkbox</type>
</CustomField>