force-app/main/default/objects/Ques_Answer__c/fields/Bb__c.field-meta.xml
<CustomField>
    <fullName>Bb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bb</label>
    <type>Checkbox</type>
</CustomField>