force-app/main/default/objects/Ques_Answer__c/fields/Bc__c.field-meta.xml
<CustomField>
    <fullName>Bc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bc</label>
    <type>Checkbox</type>
</CustomField>