force-app/main/default/objects/Ques_Answer__c/fields/Bd__c.field-meta.xml
<CustomField>
    <fullName>Bd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bd</label>
    <type>Checkbox</type>
</CustomField>