force-app/main/default/objects/Ques_Answer__c/fields/Be__c.field-meta.xml
<CustomField>
    <fullName>Be__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Be</label>
    <type>Checkbox</type>
</CustomField>