force-app/main/default/objects/Ques_Answer__c/fields/Bf__c.field-meta.xml
<CustomField>
    <fullName>Bf__c</fullName>
    <label>Bf</label>
    <type>TextArea</type>
</CustomField>