force-app/main/default/objects/Ques_Answer__c/fields/Ca__c.field-meta.xml
<CustomField>
    <fullName>Ca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ca</label>
    <type>Checkbox</type>
</CustomField>