force-app/main/default/objects/Ques_Answer__c/fields/Cb__c.field-meta.xml
<CustomField>
    <fullName>Cb__c</fullName>
    <label>Cb</label>
    <length>200</length>
    <type>Text</type>
</CustomField>