force-app/main/default/objects/Ques_Answer__c/fields/Cc__c.field-meta.xml
<CustomField>
    <fullName>Cc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cc</label>
    <type>Checkbox</type>
</CustomField>