force-app/main/default/objects/Ques_Answer__c/fields/CustomContract__c.field-meta.xml
<CustomField>
    <fullName>CustomContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>合同</label>
    <referenceTo>CustomContract__c</referenceTo>
    <relationshipLabel>问题</relationshipLabel>
    <relationshipName>Ques_Answer</relationshipName>
    <type>Lookup</type>
</CustomField>