force-app/main/default/objects/Ques_Answer__c/fields/Da__c.field-meta.xml
<CustomField>
    <fullName>Da__c</fullName>
    <label>Da</label>
    <length>200</length>
    <type>Text</type>
</CustomField>