force-app/main/default/objects/Ques_Answer__c/fields/Db__c.field-meta.xml
<CustomField>
    <fullName>Db__c</fullName>
    <label>Db</label>
    <length>200</length>
    <type>Text</type>
</CustomField>