force-app/main/default/objects/Ques_Answer__c/fields/Dc__c.field-meta.xml
<CustomField>
    <fullName>Dc__c</fullName>
    <label>Dc</label>
    <length>200</length>
    <type>Text</type>
</CustomField>