force-app/main/default/objects/Ques_Answer__c/fields/Dd__c.field-meta.xml
<CustomField>
    <fullName>Dd__c</fullName>
    <label>Dd</label>
    <length>200</length>
    <type>Text</type>
</CustomField>