force-app/main/default/objects/Ques_Answer__c/fields/Ea__c.field-meta.xml
<CustomField>
    <fullName>Ea__c</fullName>
    <label>Ea</label>
    <type>TextArea</type>
</CustomField>