force-app/main/default/objects/Ques_Answer__c/fields/Fa__c.field-meta.xml
<CustomField>
    <fullName>Fa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fa</label>
    <type>Checkbox</type>
</CustomField>