force-app/main/default/objects/Ques_Answer__c/fields/Fb__c.field-meta.xml
<CustomField>
    <fullName>Fb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fb</label>
    <type>Checkbox</type>
</CustomField>