force-app/main/default/objects/Ques_Answer__c/fields/Fc__c.field-meta.xml
<CustomField>
    <fullName>Fc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fc</label>
    <type>Checkbox</type>
</CustomField>