force-app/main/default/objects/Ques_Answer__c/fields/Fd__c.field-meta.xml
<CustomField>
    <fullName>Fd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fd</label>
    <type>Checkbox</type>
</CustomField>