force-app/main/default/objects/Ques_Answer__c/fields/Fe__c.field-meta.xml
<CustomField>
    <fullName>Fe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fe</label>
    <type>Checkbox</type>
</CustomField>