force-app/main/default/objects/Ques_Answer__c/fields/Gf__c.field-meta.xml
<CustomField>
    <fullName>Gf__c</fullName>
    <defaultValue>&apos;否&apos;</defaultValue>
    <label>Gf</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>否</fullName>
                <default>true</default>
                <label>否</label>
            </value>
            <value>
                <fullName>是</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>