force-app/main/default/objects/Ques_Answer__c/fields/Ha__c.field-meta.xml
<CustomField>
    <fullName>Ha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ha</label>
    <type>Checkbox</type>
</CustomField>