force-app/main/default/objects/Ques_Answer__c/fields/Hb__c.field-meta.xml
<CustomField>
    <fullName>Hb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hb</label>
    <type>Checkbox</type>
</CustomField>