force-app/main/default/objects/Ques_Answer__c/fields/Hc__c.field-meta.xml
<CustomField>
    <fullName>Hc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hc</label>
    <type>Checkbox</type>
</CustomField>