force-app/main/default/objects/Ques_Answer__c/fields/Hd__c.field-meta.xml
<CustomField>
    <fullName>Hd__c</fullName>
    <label>Hd</label>
    <length>200</length>
    <type>Text</type>
</CustomField>