force-app/main/default/objects/Ques_Answer__c/fields/QUES10__c.field-meta.xml
<CustomField>
    <fullName>QUES10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QUES10</label>
    <type>Checkbox</type>
</CustomField>