force-app/main/default/objects/Ques_Answer__c/fields/QUES11__c.field-meta.xml
<CustomField>
    <fullName>QUES11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QUES11</label>
    <type>Checkbox</type>
</CustomField>