force-app/main/default/objects/Ques_Answer__c/fields/QUES1__c.field-meta.xml
<CustomField>
    <fullName>QUES1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QUES1</label>
    <type>Checkbox</type>
</CustomField>