force-app/main/default/objects/Ques_Answer__c/fields/Ta__c.field-meta.xml
<CustomField>
    <fullName>Ta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ta</label>
    <type>Checkbox</type>
</CustomField>