force-app/main/default/objects/Ques_Answer__c/fields/Taid__c.field-meta.xml
<CustomField>
    <fullName>Taid__c</fullName>
    <label>Taid</label>
    <length>200</length>
    <type>Text</type>
</CustomField>