force-app/main/default/objects/Ques_Answer__c/fields/Taname__c.field-meta.xml
<CustomField>
    <fullName>Taname__c</fullName>
    <label>Taname</label>
    <length>200</length>
    <type>Text</type>
</CustomField>